SubjectType에 한글 설명하는 description 추가